--- a/src/components/leftBar/leftBar.module.css
+++ b/src/components/leftBar/leftBar.module.css
@@ -6,7 +6,11 @@
   margin-top: 0;
   flex: 0.2;
 
-  border: 1px solid #b4b4b42b;
+  border-left: 1px solid #b4b4b42b;
+  border-right: 1px solid #b4b4b42b;
+  border-bottom: 1px solid #b4b4b42b;
+  border-top: 'none';
+
   overflow-x: hidden;
   text-align: left;
 }
